# wallpaper-maid

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
src/wallpaper_maid/: __init__.py  db_helper.py  settings.py  theme.rasi  utils.py  wallpaper_maid.py
